<resources>
    <string name="app_name">LoginProject</string>

    <!-- login strings
    -->
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="sign_up_password">Password</string>
    <string name="RegisterText">No account ? Register HERE</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
</resources>
